<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Incidencia.IncidenciaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginRight="40sp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtIncidence"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/incidence"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resTxtInc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultDummy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/statusText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resultDummy" />

            <Button
                android:id="@+id/buttonStatus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="40sp"
        android:layout_marginRight="40sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/resultDummy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="40sp"
        android:layout_marginRight="40sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginLeft="30sp"
                android:text="@string/resultDummy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resultDummy" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>